Bug 151118 - SVG: incorrect spacing with xml:space="preserve"
Summary: SVG: incorrect spacing with xml:space="preserve"
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: filters and storage (show other bugs)
Version:
(earliest affected)
4.0.0.3 release
Hardware: All All
: medium normal
Assignee: Xisco Faulí
URL:
Whiteboard: target:7.5.0 target:7.4.3
Keywords: filter:svg
: 152410 (view as bug list)
Depends on:
Blocks: SVG-Import
  Show dependency treegraph
 
Reported: 2022-09-22 08:56 UTC by Xisco Faulí
Modified: 2023-07-12 16:53 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
sample file (374 bytes, image/svg+xml)
2022-09-22 08:56 UTC, Xisco Faulí
Details
Comparsion Firefox vs LibreOffice 7.5 master (33.46 KB, image/png)
2022-09-22 08:56 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2022-09-22 08:56:16 UTC
Created attachment 182611 [details]
sample file

Steps to reproduce:
1. Open attached document

-> see comparison

Reproduced in

Version: 7.5.0.0.alpha0+ / LibreOffice Community
Build ID: 90861cc6f815b3f34edb88d47afed0d1099e72e7
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 1 Xisco Faulí 2022-09-22 08:56:47 UTC
Created attachment 182612 [details]
Comparsion Firefox vs LibreOffice 7.5 master
Comment 2 Commit Notification 2022-09-22 11:45:17 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ddf695db44bcb23dc2f1459fd439f93c0b6d5f2a

tdf#151118: svg: fix handling of xml:space="preserve"

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2022-09-23 10:24:54 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/bdebe856d110700d757625f121879de920b9ef46

tdf#151118: svg: don't replace newline with space when xml:space="default"

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2022-09-23 12:20:41 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/5e6b02055a887bc49c5252c1ae359ae96947e80c

tdf#151118: don't trim leading/trailing spaces in 'preserve' case

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2022-09-23 14:40:19 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/254d5af3e29876fe709daf44b1fc7753085b7b6f

tdf#151118: svg: fix handling of xml:space="preserve"

It will be available in 7.4.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2022-09-23 14:40:28 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/88442b612be20158d6dee067af7e8a67f7646b68

tdf#151118: svg: don't replace newline with space when xml:space="default"

It will be available in 7.4.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2022-09-26 09:03:39 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/f5af51332344b35bc5d7a2588e785c01116277a8

tdf#151118: don't trim leading/trailing spaces in 'preserve' case

It will be available in 7.4.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Stéphane Guillou (stragu) 2023-07-12 16:50:26 UTC
*** Bug 152410 has been marked as a duplicate of this bug. ***
Comment 9 Stéphane Guillou (stragu) 2023-07-12 16:53:22 UTC
Was already there at the beginning of SVG support in 4.0.0.3.