svgio/inc/svgtools.hxx
@@ -125,10 +125,9 @@ namespace svgio::svgreader
 
         void readImageLink(const OUString& rCandidate, OUString& rXLink, OUString& rUrl, OUString& rMimeType, OUString& rData);
 
-        OUString convert(const OUString& rCandidate, sal_Unicode nPattern, sal_Unicode nNew, bool bRemove);
+        OUString convert(const OUString& rCandidate, sal_Unicode nPattern, sal_Unicode nNew);
         OUString consolidateContiguousSpace(const OUString& rCandidate);
-        OUString whiteSpaceHandlingDefault(const OUString& rCandidate);
-        OUString whiteSpaceHandlingPreserve(const OUString& rCandidate);
+        OUString xmlSpaceHandling(const OUString& rCandidate, bool bIsDefault);
 
         // #125325# removes block comment of the general form '/* ... */', returns
         // an adapted string or the original if no comments included
